--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -46,7 +46,7 @@
   @media screen and (max-width:932px){
     *{
       position: relative;
-      width: 100%;
+      /* width: 100%; */
       /* display: block; */
       text-align: center;
     }
