--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,10 +11,10 @@
           
         </div> -->
         <div>
-         <b> <h1 class="thename"> Hello {{name }} !!</h1></b>
+         <strong> <h1 class="thename text-left"> Hello {{name}} !!</h1></strong>
          <hr>
         </div>
-        <h2>All My Applied Policies</h2>
+        <h2 class="text-center">All My Applied Policies</h2>
        
         <div class="table-responsive" id="tableofcontent">
           <table class="table table-striped table-sm">
