--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="home text-center">
-    <img src="../../assets/5553.jpg" alt="" height="500px">
+    <img src="../../assets/5553.jpg" alt="img">
     <h1>
       
       The insurance is very important for you and your family don't neglect it!
